--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -15,6 +15,11 @@ server {
   charset utf-8;
 
   location / {
+    <% @internal_networks.each do |network| %>
+    allow <%= network %>;
+    <% end %>
+    deny all;
+
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $http_host;
