--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -8,8 +8,8 @@ server {
   listen 80;
   server_name <%= @server_name %>;
 
-  access_log <%= @logs_basedir %>/nginx_access.log;
-  error_log <%= @logs_basedir %>/nginx_error.log;
+  access_log <%= @access_log %> combined;
+  error_log <%= @error_log %> <%= @debug ? 'debug' : 'error' %>;
 
   keepalive_timeout 100;
   charset utf-8;
