--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -20,6 +20,9 @@ server {
     <% end %>
     deny all;
 
+    auth_basic "Restricted";
+    auth_basic_user_file <%= @htpasswd %>;
+
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $http_host;
